jena-shex/src/test/files/spec/negativeStructure/Cycle1Negation2.shex
# Negated circular reference to :S.
PREFIX :       <http://example.org/>

:S {
  :a {
    :b NOT @:S
  }
}
